2nd try to fix layout bugs for mobile & tablet

--- a/src/App.scss
+++ b/src/App.scss
@@ -146,7 +146,7 @@ input {
 
 .logo {
   align-self: start;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
 }
 
 .line {
