--- a/src/stylesheets/mediaqueries.scss
+++ b/src/stylesheets/mediaqueries.scss
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 600px) {
   body {
     padding: 40px 16px !important;
-    width: 100vw !important;
+    width: 100% !important;
   }
   .background-svg {
     display: none !important;
@@ -37,7 +37,7 @@
     flex-direction: row !important;
     position: relative !important;
     margin: 16px auto;
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   .preview-img {
@@ -100,21 +100,33 @@
 }
 
 @media only screen and (max-width: 1200px) {
+body {
+  padding: 40px 40px !important;
+}
+
   .form-container {
     width: 100% !important;
+
+    .subheader,
+    input,
+    h1,
+    button {
+      width: 100% !important;
+    }
   }
 
   .background-container {
     flex-direction: column !important;
     align-items: center;
+    width: 100% !important;
   }
 
   .images-container {
     flex-direction: row !important;
-    left: -50% !important	;
-    top: auto !important;
-    right: auto !important;
-    bottom: 15% !important	;
+    position: relative !important;
+    margin: 16px auto;
+    overflow-x: hidden;
+    left: -50%;
   }
 
   .preview-img {
@@ -132,7 +144,7 @@
     }
 
     &-right {
-      right: -30%;
+      right: -10% !important;
     }
   }
 }
